
namespace Values.AnimationParameters
{
    class Edgar
    {
        public const string HorizontalSwing = "HorizontalSwing";
        public const string IdlePhase1 = "IdlePhase1";
        public const string PlasmaShoot = "PlasmaShoot";
        public const string VerticalSwing = "VerticalSwing";
        public const string PlasmaConcentration = "PlasmaConcentration";
        public const string IdlePhase2 = "IdlePhase2";
        public const string HeavySwing = "HeavySwing";
        public const string Jump = "Jump";
        public const string PlasmaRelease = "PlasmaRelease";
        public const string Vulnerable = "Vulnerable";
        public const string Hurt = "Hurt";
    }
}
